2005-07-16  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/repos/default.rb: ReposBase#root and ReposBase#data_path are
	now private.

2005-07-15  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/en/math.rb: add English resources (by Kashia Buch).

	* hiki/config.rb (load): now default vaule of @use_plugin is true.
	set @cgi_name to './' if it is empty.
	* hiki/plugin.rb (save): set a ':editor' attribute.

2005-07-14  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hikifarm/index.cgi (run): not to use Hiki::Util.redirect as
	a module function to avoid an error.

	* misc/hikifarm/cvs.rb, misc/hikifarm/svn.rb: ReposCvs and
	ReposSvnBase are derived from ReposBase instead of ReposDefault.

	* misc/hikifarm/default.rb: methods of ReposBase raises an
	exception because it should not to be instantiated.

2005-07-14  Kazuhiko  <kazuhiko@fdiary.net>
	* Hiki 0.8.1 released!

	* hiki/command.rb (cmd_preview, cmd_save, cmd_admin),
	template/adminform.html, template/edit.html,
	template/i.adminform.html, template/i.edit.html: check the
	session_id in cgi queries to avoid 'Cross-Site Request Forgeries'
	vulnerabilities.

	* hiki/command.rb (cmd_admin): raise PermissionError instead of
	redirection to FrontPage.

	* template/i.edit.html: remove needless 'freeze_msg'. add a link
	to the editing form.

	* plugin/00default.rb, template/edit.html, template/i.edit.html:
	remove 'accesskey' attributes (closes #9).

	* messages/en.rb, messages/fr.rb, messages/it.rb,
	messages/ja.rb (msg_preview), template/edit.html: add a link to
	the editing form (suggested by Kouhei Sutou).

2005-07-13  Kouhei Yanagita <sugi@dream.big.or.jp>
	* test/test_repos_default.rb: add unit tests for ReposDefault.

2005-07-13  Kazuhiko  <kazuhiko@fdiary.net>
	* template/edit.html: remove needless 'freeze_msg'.
	* hiki/command.rb (cmd_edit): preserve freeze status in preview
	mode.

	* hiki/util.rb (redirect): use 'meta refresh' if @conf.use_refresh
	is set (reported by nkoz and 7743).
